# Functional99

./: .gitignore  CHANGELOG.md  Functional99.cabal  README.md  notes.txt
src/: Main.hs  Problem1.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem15.hs  Problem16.hs  Problem17.hs  Problem18.hs  Problem19.hs  Problem2.hs  Problem20.hs  Problem21.hs  Problem22.hs  Problem23.hs  Problem24.hs  Problem25.hs  Problem26.hs  Problem27.hs  Problem28.hs  Problem3.hs  Problem31.hs  Problem32.hs  Problem33.hs  Problem34.hs  Problem35.hs  Problem36.hs  Problem37.hs  Problem39.hs  Problem40.hs  Problem41.hs  Problem46.hs  Problem48.hs  Problem49.hs  Problem5.hs  Problem50.hs  Problem55.hs  Problem56.hs  (+45 more)
