name:                Functional99
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Functional99#readme
license:             BSD3
license-file:        LICENSE
author:              atombear
maintainer:          atpapag@gmail.com
copyright:           2022 atombear
category:            Puzzles
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable Functional99
  hs-source-dirs:      src
  main-is:             Problems100.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       containers,
                       mtl,
                       array,
                       MemoTrie
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
