name:                Functional99
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Functional99#readme
license:             BSD3
license-file:        LICENSE
author:              atombear
maintainer:          atpapag@gmail.com
copyright:           2022 atombear
category:            Puzzles
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable Functional99
  hs-source-dirs:      src
  main-is:             Problems100.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       containers,
                       mtl,
                       array,
                       MemoTrie,
                       extra
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:       Problem55
                       Problem56
                       Problem57
                       Problem58
                       Problem59
                       Problem60
                       Problem61
                       Problem62
                       Problem63
                       Problem64
                       Problem65
                       Problem66
                       Problem67
                       Problem68
                       Problem69
                       Problem70
                       Problem71
                       Problem72
                       Problem73
                       Problem80
                       Problem81
                       Problem82
                       Problem83
                       Problem84
                       Problem85
                       Problem86
                       Problem87
                       Problem88
                       Problem89
                       Problem90
                       Problem91