name:                Functional99
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Functional99#readme
license:             BSD3
license-file:        LICENSE
author:              atombear
maintainer:          atpapag@gmail.com
copyright:           2022 atombear
category:            Puzzles
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable Functional99
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       containers,
                       mtl,
                       array,
                       MemoTrie,
                       extra,
                       directory
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:       Problem1
                       Problem10
                       Problem11
                       Problem12
                       Problem13
                       Problem14
                       Problem15
                       Problem16
                       Problem17
                       Problem18
                       Problem19
                       Problem2
                       Problem20
                       Problem21
                       Problem22
                       Problem23
                       Problem24
                       Problem25
                       Problem26
                       Problem27
                       Problem28
                       Problem3
                       Problem31
                       Problem32
                       Problem33
                       Problem34
                       Problem35
                       Problem36
                       Problem37
                       Problem39
                       Problem4
                       Problem40
                       Problem41
                       Problem46
                       Problem48
                       Problem49
                       Problem5
                       Problem50
                       Problem6
                       Problem7
                       Problem8
                       Problem9
                       Problem55
                       Problem56
                       Problem57
                       Problem58
                       Problem59
                       Problem60
                       Problem61
                       Problem62
                       Problem63
                       Problem64
                       Problem65
                       Problem66
                       Problem67
                       Problem68
                       Problem69
                       Problem70
                       Problem71
                       Problem72
                       Problem73
                       Problem80
                       Problem81
                       Problem82
                       Problem83
                       Problem84
                       Problem85
                       Problem86
                       Problem87
                       Problem88
                       Problem89
                       Problem90
                       Problem91
                       Problem92
                       Problem93
                       Problem94
                       Problem95
                       Problem96
                       Problem97
                       Problem98
                       Problems50
                       Problems100